  * Added key VACM tables caching for better `isAccessAllowed` lookup
    performance

  One potential incompatibility may be caused by the `addContext()` call
  which now needs to be made explicitly during low-level VACM configuration
  rather than be a side effect of `addVacmAccess()` call.

- Rebased MIB importing code onto `importlib` because `imp` is long
  deprecated
- Fixed asyncore main loop to respect non-default timer resolution
- Fixed `.setTimerResolution()` behaviour of abstract main loop dispatcher
  to update call intervals of the existing periodic dispatcher jobs
- Fixed `var-bindings` initialization to prevent pyasn1 encoder failures
  with newer pyasn1 versions where `SequenceOf` type looses its default
  initializer.
- Fixed crash on uninitialized component serialization left out in
  SNMP v1 TRAP PDU to SNMPv2/3 TRAP PDU proxy translation routine.

Revision 4.4.9, released 2019-02-09
-----------------------------------

- Made MIB loader ignoring file and directory access errors
- Added missing SNMP PDU error classes and their handling in Command Responder
- Fixed crash on MIB load failure in case of directory access error
- Fixed socket transparency option (IPV6_TRANSPARENT) to make IPv6
  transparent operation functional

Revision 4.4.8, released 2018-12-30
-----------------------------------

- Fixed Pythonized MIB load (in the source form) - made sure to turn
  it into a code object prior to its execution

Revision 4.4.7, released 2018-12-29
-----------------------------------

- Copyright notice extended to the year 2019
- Exposed ASN.1 `Null` type through `rfc1902` module for convenience.
- Use `compile()` before `exec`'ing MIB modules to attach filename to
  the stack frames (ultimately shown in traceback/debugger)
- Fixed hlapi/v3arch transport target caching to ensure transport targets
  are different even if just timeout/retries options differ
- Fixed hlapi LCD configurator to include `contextName`. Prior to this fix